--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="./src/assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- <script src="./src/assets/bootstrap/bootstrap.bundle.min.js"></script> -->
   </body>
 </html>
